--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd-jalali-moment": "^3.3.8",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "currency-formatter": "^1.5.9",
     "draft-js": "^0.11.7",
     "file-loader": "^6.2.0",
     "i18next": "^19.9.2",
@@ -39,6 +40,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-countdown": "^2.3.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "17.0.1",
     "react-draft-wysiwyg": "^1.14.7",
     "react-i18next": "^11.8.10",
